--- a/com.local.KeyRemapping.plist
+++ b/com.local.KeyRemapping.plist
@@ -1,3 +1,4 @@
+// ~/Library/LaunchAgents에 설치하기
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
