--- a/db/postgres/docker-compose.yml
+++ b/db/postgres/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
 
   postgres:
-    image: postgres
+    image: postgres:16-bookworm
     container_name: postgres
     restart: unless-stopped
     environment:
@@ -14,5 +14,5 @@ services:
     ports:
       - 5432:5432
     volumes:
-      - /Users/luca/Desktop/infra/db/postgres/data:/var/lib/postgresql/data
+      - /Users/luca/Desktop/.util/db/postgres/data:/var/lib/postgresql/data
 
