--- a/db/mysql/docker-compose.yml
+++ b/db/mysql/docker-compose.yml
@@ -13,6 +13,9 @@ services:
     command:
       - --character-set-server=utf8mb4
       - --collation-server=utf8mb4_unicode_ci
+      - --sql-mode=NO_ENGINE_SUBSTITUTION
+      - --skip-character-set-client-handshake
+
     volumes:
       - /Users/luca/Desktop/.util/db/mysql/data:/var/lib/mysql
       - /Users/luca/Desktop/.util/db/mysql/conf.d:/etc/mysql/conf.d
