--- a/.tmux.conf
+++ b/.tmux.conf
@@ -64,17 +64,32 @@ set-window-option -g mode-keys vi
 set -g @plugin 'tmux-plugins/tpm'
 
 # Plugins
-set -g @plugin 'dracula/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @dracula-show-flags true
-set -g @dracula-show-fahrenheit false
+set -g @dracula-show-powerline true
+set -g @dracula-show-weather true
 set -g @dracula-show-location true
+set -g @dracula-fixed-location "Seoul"
+set -g @dracula-show-fahrenheit false
+set -g @dracula-show-flags true
+set -g @dracula-refresh-rate 5
 set -g @dracula-show-left-icon session
-set -g status-position top
 
+set -g @resurrect-strategy-nvim 'session'
+set -g @resurrect-strategy-vim 'session'
+
+set -g @continuum-save-interval '15'
+
+set -g @resurrect-capture-pane-contents 'on'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
+set -g @plugin 'dracula/tmux'
+
+set -g status-position top
 
 # TPM 초기화 (꼭 마지막에 있어야 함)
 run '~/.tmux/plugins/tpm/tpm'
