modify tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,12 @@ set -g prefix C-Space
 unbind C-b
 bind C-Space send-prefix
 
+### Default keymap
+## window rename
+# prefix + ,
+## copy clipboard
+# prefix + [
+
 # Reload config
 unbind r
 bind r source-file ~/.tmux-conf
